<resources>
    <string name="app_name">Kuching Park Hotel Booking App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enquiry_title">Have a question? Send us a message</string>
    <string name="message_label">Send the message</string>
    <string name="firstName_hint">First name</string>
    <string name="lastName_hint">Last name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="message_hint">Your message</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="address_title">Address</string>
    <string name="address_content">Lot 606 Padungan Road, 93100 Kuching, Sarawak</string>
    <string name="getmap">Go to Google Map</string>

    <string name="email_label">EMAIL</string>
    <string name="room_label">ROOM TYPE</string>
    <string name="no_rooms_label">NO OF ROOMS</string>
    <string name="checkin_label">CHECK IN</string>
    <string name="checkout_label">CHECK OUT</string>
    <string name="name_label">NAME</string>
    <string name="phone_label">PHONE</string>
    <string name="book_label">BOOK A ROOM</string>
    <string name="title_activity_room_detail">room_detail</string>
    <string name="upcoming_booking">Upcoming Booking</string>
    <string name="duration">Duration</string>
    <string name="services">Services</string>
    <string name="what_will_you_be_doing_today">What will you be doing today?</string>
    <string name="title_activity_search__room_">Search_Room_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
<<<<<<< HEAD
    <string name="rm">RM ""</string>
=======
    <string name="title_activity_room__listing_">Room_Listing_Activity</string>
>>>>>>> 0510e1ae9c9793a3104d7e875f8d576f7809c119
</resources>
