<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="com.example.kuching_park_hotel.Map_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/kuching_park"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textview_address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/address_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_map" />

    <TextView
        android:id="@+id/textview_address_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_content"
        android:textSize="22sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_address_title"
        />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getmap"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/textview_address_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
