<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/cardtitlesize_main"
            android:text="Welcome back, \nEddie"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cardmargin_main"
            android:background="@drawable/rounded"
            android:padding="@dimen/cardpad_main"
            app:layout_constraintTop_toBottomOf="@id/textView13">

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:barrierDirection="end" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textpad_main"
                android:text="@string/upcoming_booking"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_roomType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textpad_main"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/cardtitlesize_main"
                android:text="Standard Quad Room"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView_noOfGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textpad_main"
                android:textStyle="bold"
                android:text="4 Guests"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView_roomType" />

            <View
                android:id="@+id/view2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/textpad_main"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_noOfGuest" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textpad_main"
                android:text="@string/duration"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/textView_durationRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textpad_main"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="23/4/2020 - 25/4/2020"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView_nightCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textpad_main"
                android:textStyle="bold"
                android:text="2 nights"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView_durationRange" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/common_google_signin_btn_icon_dark_focused"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cardmargin_main"
            android:padding="@dimen/cardpad_main"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card1">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/cardtitlesize_main"
                android:text="@string/services"
                android:layout_margin="@dimen/textpad_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/what_will_you_be_doing_today"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <GridLayout
                android:columnCount="3"
                android:rowCount="1"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView11"
                app:layout_constraintLeft_toLeftOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_bed"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="2"
                    android:layout_rowWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">


                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/bed_big"
                            android:padding="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:textSize="16sp"
                            android:text="Rooms"
                            android:textStyle="bold"
                            android:textColor="@color/dark_grey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_points"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="2"
                    android:layout_rowWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">


                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/coin_big"
                            android:padding="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:textSize="16sp"
                            android:text="Points"
                            android:textStyle="bold"
                            android:textColor="@color/dark_grey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_cart"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="2"
                    android:layout_rowWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">


                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/cart_big"
                            android:padding="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Retailers"
                            android:textColor="@color/dark_grey"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
